# C_SimpleGames

./: .gitignore  CMakeLists.txt  README.md
src/: 2048.c
src/prototype/2048/: line.c
